// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component should render correctly when total items is 0 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c1 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 0.8rem 2.4rem 1rem 2.4rem;
  border-radius: 0.8rem;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1::after {
  content: '';
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.8rem;
  border-style: solid;
}

.c1:disabled {
  color: #98A7B7;
  background-color: transparent;
}

.c1:disabled::after {
  border-width: 0.1rem;
  border-color: #98A7B7;
}

.c1:disabled .sc-AxirZ * {
  fill: #98A7B7;
}

.c1:not(:disabled):not(:hover) {
  color: #126AFA;
  background-color: transparent;
}

.c1:not(:disabled):not(:hover)::after {
  border-width: 0.1rem;
  border-color: #126AFA;
}

.c1:not(:disabled):not(:hover) .sc-AxirZ * {
  fill: #126AFA;
}

.c1:not(:disabled):active {
  color: #0D4AAF;
  background-color: #E7F0FF;
}

.c1:not(:disabled):active::after {
  border-width: 0.2rem;
  border-color: #0D4AAF;
}

.c1:not(:disabled):active .sc-AxirZ * {
  fill: #0D4AAF;
}

.c1:not(:disabled):not(:active):hover {
  color: #0F5AD5;
  background-color: transparent;
  box-shadow: 0 0.2rem 0.8rem rgba(15,90,213,0.35);
}

.c1:not(:disabled):not(:active):hover::after {
  border-width: 0.2rem;
  border-color: #0F5AD5;
}

.c1:not(:disabled):not(:active):hover .sc-AxirZ * {
  fill: #0F5AD5;
}

.c1 .sc-AxirZ + .c2 {
  margin-left: 0.8rem;
}

.c1 .c2 + .sc-AxirZ {
  margin-left: 0.8rem;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

<div>
  <ul
    class="c0"
  >
    <li>
      <button
        class="c1"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          First
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          Prev
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          Next
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          Last
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination component should render correctly with all the default props 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c1 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 0.8rem 2.4rem 1rem 2.4rem;
  border-radius: 0.8rem;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1::after {
  content: '';
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.8rem;
  border-style: solid;
}

.c1:disabled {
  color: #98A7B7;
  background-color: transparent;
}

.c1:disabled::after {
  border-width: 0.1rem;
  border-color: #98A7B7;
}

.c1:disabled .sc-AxirZ * {
  fill: #98A7B7;
}

.c1:not(:disabled):not(:hover) {
  color: #126AFA;
  background-color: transparent;
}

.c1:not(:disabled):not(:hover)::after {
  border-width: 0.1rem;
  border-color: #126AFA;
}

.c1:not(:disabled):not(:hover) .sc-AxirZ * {
  fill: #126AFA;
}

.c1:not(:disabled):active {
  color: #0D4AAF;
  background-color: #E7F0FF;
}

.c1:not(:disabled):active::after {
  border-width: 0.2rem;
  border-color: #0D4AAF;
}

.c1:not(:disabled):active .sc-AxirZ * {
  fill: #0D4AAF;
}

.c1:not(:disabled):not(:active):hover {
  color: #0F5AD5;
  background-color: transparent;
  box-shadow: 0 0.2rem 0.8rem rgba(15,90,213,0.35);
}

.c1:not(:disabled):not(:active):hover::after {
  border-width: 0.2rem;
  border-color: #0F5AD5;
}

.c1:not(:disabled):not(:active):hover .sc-AxirZ * {
  fill: #0F5AD5;
}

.c1 .sc-AxirZ + .c2 {
  margin-left: 0.8rem;
}

.c1 .c2 + .sc-AxirZ {
  margin-left: 0.8rem;
}

.c4 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 0.8rem 2.4rem 1rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
}

.c4:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c4:disabled .sc-AxirZ * {
  fill: #98A7B7;
}

.c4:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #126AFA;
}

.c4:not(:disabled):not(:hover) .sc-AxirZ * {
  fill: #ffffff;
}

.c4:not(:disabled):active {
  color: #ffffff;
  background: #0D4AAF;
}

.c4:not(:disabled):active .sc-AxirZ * {
  fill: #ffffff;
}

.c4:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #0F5AD5;
  box-shadow: 0 0.2rem 0.8rem rgba(15,90,213,0.35);
}

.c4:not(:disabled):not(:active):hover .sc-AxirZ * {
  fill: #ffffff;
}

.c4 .sc-AxirZ + .c2 {
  margin-left: 0.8rem;
}

.c4 .c2 + .sc-AxirZ {
  margin-left: 0.8rem;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

<div>
  <ul
    class="c0"
  >
    <li>
      <button
        class="c1"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          First
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          Prev
        </span>
      </button>
    </li>
    <li>
      <button
        class="c4"
        type="button"
      >
        <span
          class="c2 c3"
        >
          1
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        type="button"
      >
        <span
          class="c2 c3"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        type="button"
      >
        <span
          class="c2 c3"
        >
          3
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        type="button"
      >
        <span
          class="c2 c3"
        >
          4
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        type="button"
      >
        <span
          class="c2 c3"
        >
          5
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        type="button"
      >
        <span
          class="c2 c3"
        >
          Next
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        type="button"
      >
        <span
          class="c2 c3"
        >
          Last
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination component should render correctly with all the props given 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c1 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 0.8rem 2.4rem 1rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c1:disabled .sc-AxirZ * {
  fill: #98A7B7;
}

.c1:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #126AFA;
}

.c1:not(:disabled):not(:hover) .sc-AxirZ * {
  fill: #ffffff;
}

.c1:not(:disabled):active {
  color: #ffffff;
  background: #0D4AAF;
}

.c1:not(:disabled):active .sc-AxirZ * {
  fill: #ffffff;
}

.c1:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #0F5AD5;
  box-shadow: 0 0.2rem 0.8rem rgba(15,90,213,0.35);
}

.c1:not(:disabled):not(:active):hover .sc-AxirZ * {
  fill: #ffffff;
}

.c1 .sc-AxirZ + .c2 {
  margin-left: 0.8rem;
}

.c1 .c2 + .sc-AxirZ {
  margin-left: 0.8rem;
}

.c4 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 0.8rem 2.4rem 1rem 2.4rem;
  border-radius: 0.8rem;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
}

.c4::after {
  content: '';
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.8rem;
  border-style: solid;
}

.c4:disabled {
  color: #98A7B7;
  background-color: transparent;
}

.c4:disabled::after {
  border-width: 0.1rem;
  border-color: #98A7B7;
}

.c4:disabled .sc-AxirZ * {
  fill: #98A7B7;
}

.c4:not(:disabled):not(:hover) {
  color: #126AFA;
  background-color: transparent;
}

.c4:not(:disabled):not(:hover)::after {
  border-width: 0.1rem;
  border-color: #126AFA;
}

.c4:not(:disabled):not(:hover) .sc-AxirZ * {
  fill: #126AFA;
}

.c4:not(:disabled):active {
  color: #0D4AAF;
  background-color: #E7F0FF;
}

.c4:not(:disabled):active::after {
  border-width: 0.2rem;
  border-color: #0D4AAF;
}

.c4:not(:disabled):active .sc-AxirZ * {
  fill: #0D4AAF;
}

.c4:not(:disabled):not(:active):hover {
  color: #0F5AD5;
  background-color: transparent;
  box-shadow: 0 0.2rem 0.8rem rgba(15,90,213,0.35);
}

.c4:not(:disabled):not(:active):hover::after {
  border-width: 0.2rem;
  border-color: #0F5AD5;
}

.c4:not(:disabled):not(:active):hover .sc-AxirZ * {
  fill: #0F5AD5;
}

.c4 .sc-AxirZ + .c2 {
  margin-left: 0.8rem;
}

.c4 .c2 + .sc-AxirZ {
  margin-left: 0.8rem;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

<div>
  <ul
    class="c0"
  >
    <li>
      <button
        class="c1"
        type="button"
      >
        <span
          class="c2 c3"
        >
          1
        </span>
      </button>
    </li>
    <li>
      <button
        class="c4"
        type="button"
      >
        <span
          class="c2 c3"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        class="c4"
        type="button"
      >
        <span
          class="c2 c3"
        >
          3
        </span>
      </button>
    </li>
    <li>
      <button
        class="c4"
        type="button"
      >
        <span
          class="c2 c3"
        >
          4
        </span>
      </button>
    </li>
  </ul>
</div>
`;
